Use version-resolver for release-drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,17 @@
+name-template: 'v$RESOLVED_VERSION'
 template: |
   ## What’s Changed
 
   $CHANGES
+
+version-resolver:
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+  patch:
+    labels:
+      - 'patch'
+  default: minor
