--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,9 +1,21 @@
 name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
 template: |
   ## What’s Changed
 
   $CHANGES
-
+categories:
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '🧰 Maintenance'
+    label: 'chore'
 version-resolver:
   major:
     labels:
