--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -16,6 +16,8 @@ categories:
       - 'bug'
   - title: '🧰 Maintenance'
     label: 'chore'
+exclude-labels:
+  - 'skip-changelog'
 version-resolver:
   major:
     labels:
